--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,7 +12,7 @@
     {{!-- <h1>This is about page...</h1> --}}
 
     {{>header}}
-
+    <p>This site was cretaed by Jangili Poojitha. It uses data from weatherapi.com!!</p>
     {{!-- <h1>{{title}}</h1> --}}
     <img class="portrait" src="/img/pic1_node.png" alt="image">
     {{!-- <p>Created by {{name}}</p> --}}
